[package]
name = "spellit"
version = "0.3.1"
authors = ["Kafji <k@kafji.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[[bench]]
name = "benches"
harness = false

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = "2.33"

[dev-dependencies]
assert_cmd = "1.0"
criterion = "0.3"
